--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <H1>
+    <div>
+      
         My Portfolio
     </H1>
     <!-- 
@@ -32,6 +33,12 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+     <div>
+      <h1>
+        <h2>Software Developer<hr/>
+        </h2>
+      </h1>
+     </div>
 </body>
 
 </html>
