--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
      <div>
-      <h1>
-        <h2>Software Developer<hr/>
-        </h2>
-      </h1>
+      <h1>Jocelyn Nava<h1>
+        <h2>Software Developer</h2>
+        </hr>
+        <p><i>My</i> favorite thing about programming is the ability to know a skill the everyday person does not know.</p>
+      <img src="https://ton.twitter.com/i/ton/data/dm/1545755649002405892/1545755625610792963/hbMiccBd.jpg:small" alt="Profile Picture Placeholder"
+      <h3>About Me</h3>
      </div>
 </body>
 
