--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <h2>Software Developer</h2>
         </hr>
         <p><i>My</i> favorite thing about programming is the ability to know a skill the everyday person does not know.</p>
-      <img src="https://ton.twitter.com/i/ton/data/dm/1545755649002405892/1545755625610792963/hbMiccBd.jpg:small" alt="Profile Picture Placeholder"
+      <img src="C:\Users\jsnav\Downloads\hbMiccBd.png" alt="Profile Picture Placeholder">
       <h3>About Me</h3>
+      <p></p>
      </div>
 </body>
 
