--- a/index.html
+++ b/index.html
@@ -37,10 +37,17 @@
       <h1>Jocelyn Nava<h1>
         <h2>Software Developer</h2>
         </hr>
-        <p><i>My</i> favorite thing about programming is the ability to know a skill the everyday person does not know.</p>
+        <p>My <i>favorite</i> thing about programming is the ability to know a skill the everyday person does not know.</p>
       <img src="C:\Users\jsnav\Downloads\hbMiccBd.png" alt="Profile Picture Placeholder">
       <h3>About Me</h3>
-      <p></p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h3>My Projects</h3>
+      <ul>Project 1</ul>
+      <ul>Project 2</ul>
+      <ul>Project 3</ul>
+      <h3>Contact Me</h3>
+      <p>Phone: 202-555-1234</p>
+      <p>Email <a href="malito.fake@email.com"> jsn@email.com</a></p>
      </div>
 </body>
 
